# claude-plugins

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
docs/: README.md
plugins/bash-output-guard/: README.md
plugins/bash-output-guard/.claude-plugin/: plugin.json
plugins/bash-output-guard/hooks/: hooks.json
plugins/bash-output-guard/scripts/: limit-bash-output.sh
plugins/bash-output-guard/skills/test-claude-skills/: SKILL.md
plugins/devcontainer-testing/: README.md
plugins/devcontainer-testing/.claude-plugin/: plugin.json
plugins/devcontainer-testing/skills/devcontainer-testing/: SKILL.md
plugins/devcontainer-testing/skills/test-claude-skills/: SKILL.md
plugins/oh-no-claudecode/: README.md
plugins/oh-no-claudecode/.claude-plugin/: plugin.json
plugins/oh-no-claudecode/hooks/: hooks.json
plugins/oh-no-claudecode/scripts/: oh-no-claudecode-rules.csv  oh-no-claudecode.py  server_lifecycle.py  test_helper.sh
plugins/oh-no-claudecode/tests/: conftest.py
plugins/oh-no-claudecode/tests/integration/: test_new_rules.py  (+2 more)
tests/: test_bash_output_guard_split.py
tests/bash-output-guard/: test_bash_output_guard_split.py
tests/oh-no-claudecode/: conftest.py
tests/oh-no-claudecode/e2e/: conftest.py  test_hook_e2e.py
tests/oh-no-claudecode/opencode-evals/: conftest.py  test_last_and_turn_mode_comparison.py  test_oh_no_claudecode.py  test_rules.py
tests/oh-no-claudecode/unit/: test_hook_output.py  test_oh_no_claudecode_logic.py  test_output_format.py  test_server_lifecycle.py
(+5 files in other folders)
