[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-plugins-tests"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "opencode: tests that require the opencode CLI and an external LLM service",
]
